--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
-  <groupId>com.softserve.academy</groupId>
-  <artifactId>UniversityManager</artifactId>
+  <groupId>JavaProject</groupId>
+  <artifactId>ShopManager</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Student-Course-Teacher Management System</name>
-  <description>Spring Boot web application to manage the educational process</description>
+  <name>Shop Management System</name>
+  <description>Spring Boot web application to manage shops</description>
 
   <properties>
     <java.version>21</java.version>
