--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,12 @@ server.port=8080
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/stores
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME: postgres}
-spring.datasource.password=${DB_PASSWORD: root}
+spring.datasource.username=postgres
+spring.datasource.password=170607
+#spring.datasource.url=jdbc:h2:mem:default
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=${DB_USERNAME: sa}
+#spring.datasource.password=${DB_PASSWORD: }
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
