--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=170607
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -35,5 +35,6 @@ logging.level.com.softserve.academy=DEBUG
 
 # Error Page Configuration
 server.error.whitelabel.enabled=false
-server.error.include-stacktrace=never
 server.error.include-message=always
+server.error.include-stacktrace=always
+
